@@ -28,6 +28,7 @@ import com.jayway.restassured.internal.mapping.ObjectMapping
 import com.jayway.restassured.mapper.ObjectMapper
 import com.jayway.restassured.response.Cookie
 import com.jayway.restassured.response.Cookies
+import com.jayway.restassured.response.Headers
 import com.jayway.restassured.response.Response
 import groovyx.net.http.HTTPBuilder.RequestConfigDelegate
 import java.util.Map.Entry
@@ -43,7 +44,6 @@ import org.apache.http.client.methods.HttpRequestBase
 import org.apache.http.entity.HttpEntityWrapper
 import org.apache.http.entity.mime.HttpMultipartMode
 import org.apache.http.entity.mime.MultipartEntity
-import org.apache.http.impl.cookie.BasicClientCookie
 import org.apache.http.message.BasicHeader
 import static com.jayway.restassured.assertion.AssertParameter.notNull
 import com.jayway.restassured.specification.*
@@ -52,7 +52,6 @@ import static groovyx.net.http.ContentType.*
 import static groovyx.net.http.Method.*
 import static java.util.Arrays.asList
 import static org.apache.http.protocol.HTTP.CONTENT_TYPE
-import com.jayway.restassured.response.Headers
 
 class RequestSpecificationImpl implements FilterableRequestSpecification {
   private static final int DEFAULT_HTTPS_PORT = 443
@@ -493,16 +492,26 @@ class RequestSpecificationImpl implements FilterableRequestSpecification {
   def RequestSpecification cookies(Cookies cookies) {
     notNull cookies, "cookies"
     def cookieList = []
-    if(this.cookies.exist()) {
-      cookieList.addAll(this.cookies.list())
+    if(cookies.exist()) {
+      if(this.cookies.exist()) {
+        cookieList.addAll(this.cookies.list())
+      }
+
+      cookieList.addAll(cookies.cookies.list())
+      this.cookies = new Cookies(cookieList)
     }
-    cookieList.addAll(cookies.cookies.list())
-    this.cookies = new Cookies(cookieList)
     this
   }
 
-  RequestSpecification cookie(String cookieName, Object value) {
-    return cookie(new Cookie.Builder(cookieName, value).build())
+  RequestSpecification cookie(String cookieName, Object value, Object...additionalValues) {
+    notNull cookieName, "Cookie name"
+    notNull value, "Cookie value"
+    def cookieList = [new Cookie.Builder(cookieName, serializeIfNeeded(value)).build()]
+    additionalValues?.each {
+      cookieList << new Cookie.Builder(cookieName, serializeIfNeeded(it)).build()
+    }
+
+    return cookies(new Cookies(cookieList))
   }
 
   def RequestSpecification cookie(Cookie cookie) {
