@@ -10,6 +10,7 @@ Change log next version
           post("/somewhere");
   (issue 127).
 * Fixed a bug with multi-value form parameters when using PUT.
+* You can now create multi-value cookies using: given().cookie("cookieName", "value1", "value2")... This will create TWO cookies, "cookieName=value1" and "cookieName=value2".
 * Non-backward compatible changes:
   Response.header(..) and Response.getHeader(..) no longer returns a String, it returns type T. T is usually a String but it can also be a List if several headers with the same name exists.
 
